# salmaabass.github.io

./: README.md  index.md
Capacitive Force Sensor Project/Mechanical Design/Mechanical design/: Assem1.SLDASM  Bottom.SLDPRT  Elastic part.SLDPRT  Ring.SLDPRT  Top part.SLDPRT
Capacitive Force Sensor Project/Mechanical Design/Mechanical design/Drawings/: Bottom.SLDDRW  Ring.SLDDRW  Top part.SLDDRW  elastic part.SLDDRW
Cruise Control C++ Project/: .gitignore  CMakeLists.txt  README.md
Cruise Control C++ Project/Simulink_Model/: cpp_project.slx  cpp_project.slxc
Cruise Control C++ Project/csv_exports/: output.csv
Cruise Control C++ Project/docs/: uml_class_diagramm.drawio
Cruise Control C++ Project/include/: controller.hpp  forwardEuler.hpp  function.hpp  helper.hpp  solver.hpp  system.hpp
Cruise Control C++ Project/src/: controller.cpp  forwardEuler.cpp  function.cpp  main.cpp  solver.cpp  system.cpp  visualisation.py
Firefighter Protoype/: Final code.c
Heat Exchanger Temperature Prediction with Machine Learning/dataset/: sequence_0.csv  sequence_1.csv  sequence_2.csv  sequence_3.csv  sequence_4.csv  sequence_5.csv  sequence_6.csv  sequence_7.csv
Heat Exchanger Temperature Prediction with Machine Learning/runs/experiment_0.1/: events.out.tfevents.1743971865.Salma_HP.4000.0
Heat Exchanger Temperature Prediction with Machine Learning/runs/experiment_1/: events.out.tfevents.1743971945.Salma_HP.4000.1
automatic teeth-brushing robot/Poster/: Poster.pptx
